index html done

--- a/05_DOM/01_index.html
+++ b/05_DOM/01_index.html
@@ -14,7 +14,19 @@
 <body class="bg-black">
     <div >
         <h1 id = 'titlee' class="heading">As-salam Wleikum</h1>
+        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing.
+        </h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, id?</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <input type="password" name="hehe" id="pass">
     </div>
+
+    <ul>
+        <li class="items">one</li>
+        <li class="items">five</li>
+        <li class="items">two</li>
+        <li class="items">three</li>
+    </ul>
 </body>
 </html>
